fix: color contrast ratio fix and opening time adjust

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ body {
   color: #252525;
   font-weight: 400;
   background-color: #f7f2e9;
-  border-bottom: 1.6rem solid #edc84b;
+  border-bottom: 1.6rem solid #f2a007;
   min-height: 100vh;
   padding: 3.2rem;
   padding-bottom: 6rem;
@@ -39,7 +39,7 @@ body {
 
 .header h1 {
   /* Non-accessible color */
-  color: #edc84b;
+  color: #f2a007;
   /* color: #af8602; */
 
   text-transform: uppercase;
@@ -58,7 +58,7 @@ body {
   content: "";
   height: 3px;
   width: 12rem;
-  background-color: #edc84b;
+  background-color: #f2a007;
   position: absolute;
   top: calc(100% - 1px);
 }
@@ -168,14 +168,14 @@ body {
   border: none;
   font-size: 1.4rem;
   font-weight: 500;
-  background-color: #edc84b;
+  background-color: #f2a007;
   padding: 1.4rem 3.2rem;
   cursor: pointer;
   transition: all 0.2s;
 }
 
 .btn:hover {
-  background-color: #e9bb24;
+  background-color: #d88d06;
 }
 
 /*
